objects/tffa__OfferTerm__c.object
<CustomObject>
    <description>Represents a term (or option, loosely speaking) in the offer, usually mirroring a product term in the offer product. Stores the offer specific rate, APR, LTV ratio, etc for that term. For products where term is not applicable, this can still be used to store rate, APR and other applicable attributes. e.g. for credit card this can store rate and APR, for HELOC this can store rate, APR, LTV ratio and overall term.</description>
    <fields>
        <fullName>tffa__APR__c</fullName>
        <description>The annual percentage rate (APR) is the annual rate charged for borrowing or earned through an investment. APR is expressed as a percentage that represents the actual yearly cost of funds over the term of a loan. This is offer specific and can be less than or equal to the
        APR in the corresponding product term.</description>
        <label>APR</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>The unique code of the term. Usually same as the product term on which it is based.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Short description about the key aspects of the term, what makes it stand out from the rest, and why one would go for it.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DrawPeriod__c</fullName>
        <description>The draw period is a fixed amount of time (in term units) during which a person (borrower) may draw upon or pull available funds, up to a limit.</description>
        <label>Draw period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IndexName__c</fullName>
        <description>Stores the name of the benchmark used for indexed rate. Popular benchmarks for an indexed rate include the prime rate, LIBOR, and various U.S. Treasury bills and notes rates. Usually available for reference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Index name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IndexRate__c</fullName>
        <description>The interest rate that is tied to a specific benchmark with rate changes based on the movement of the benchmark. Indexed interest rates are used in variable-rate credit products. Usually available for reference.</description>
        <label>Index rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Margin__c</fullName>
        <description>Number of percentage points of interest a lender adds to the index rate to determine the total interest rate. Usually available for reference.</description>
        <label>Margin</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyRepaymentAmount__c</fullName>
        <description>An estimate of the amount of money a person (borrower) would need to pay at monthly intervals to repay the debt. This is usually calculated at runtime based on the term attributes and amount requested.</description>
        <label>Monthly repayment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Offer__c</fullName>
        <description>Parent Offer</description>
        <label>Offer</label>
        <referenceTo>tffa__Offer__c</referenceTo>
        <relationshipLabel>Offer Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Rate__c</fullName>
        <description>The interest rate associated with this term. This is offer specific and can be less than or equal to the rate in the corresponding product term.</description>
        <label>Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__RepaymentPeriod__c</fullName>
        <description>The repayment period or pay-off period is the set time (in term units) where loan payments shift from a non-amortizing payment to a fully amortizing payment. Additionally, funds are no longer available to draw once the repayment period has commenced.</description>
        <label>Repayment period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TermUnit__c</fullName>
        <description>The unit in which the term and other relevant periods are captured. e.g. year, month, etc</description>
        <label>Term unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductTermUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Term__c</fullName>
        <description>The value of the term (in term units). May not be applicable for products with no terms. For HELOC, this is usually draw period plus repayment period.</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Offer Term</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>